# renderer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  justfile
assets/environments/NightEnvironmentHDRI010_1K/: NightEnvironmentHDRI010_1K_HDR.exr
shaders/compiled/: model_ps.spv  model_vs.spv  shadow_vs.spv
shaders/hlsl/: gbuffer.hlsli  lights.hlsli  pbr.hlsli  shadow.hlsli
shaders/hlsl/compute/: brdf_lut.hlsl
shaders/hlsl/pixel/: gbuffer.hlsl  light_volume_point.hlsl  light_volume_spot.hlsl  lighting.hlsl  model.hlsl  model_pbr.hlsl  model_pbr_ibl.hlsl
shaders/hlsl/vertex/: gbuffer.hlsl  light_volume.hlsl  lighting.hlsl
src/: main.cpp
src/Core/: Assert.h  Config.cpp  Config.h  Event.h  EventDispatcher.h  Log.cpp  Log.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  Types.h
src/Platform/: FileDialog.cpp  FileDialog.h  Input.cpp  Input.h  Window.cpp  Window.h
src/RHI/: MipmapGenerator.cpp  MipmapGenerator.h  RHIBuffer.cpp  RHIBuffer.h  RHICommandBuffer.cpp  RHICommandBuffer.h  RHICommandPool.cpp  RHICommandPool.h  RHIDeletionQueue.cpp  RHIDeletionQueue.h  RHIDescriptorPool.cpp  RHIDescriptorPool.h  RHIDescriptorSet.cpp  RHIDescriptorSet.h  RHIDescriptorSetLayout.cpp  RHIDescriptorSetLayout.h  RHIDevice.cpp  RHIDevice.h  RHIFence.cpp  RHIFence.h  RHIImage.cpp  RHIImage.h  RHIInstance.cpp  RHIInstance.h  RHIPhysicalDevice.cpp  RHIPhysicalDevice.h  RHIPipeline.cpp  RHIPipeline.h  RHISampler.cpp  RHISampler.h  RHISemaphore.cpp  RHISemaphore.h  RHIShader.cpp  RHIShader.h  RHISwapchain.cpp  RHISwapchain.h  RHITexture.cpp  RHITexture.h  stb_impl.cpp
src/Renderer/: CascadedShadowMap.cpp  CascadedShadowMap.h  DepthBuffer.cpp  DepthBuffer.h  FrameManager.cpp  FrameManager.h  GBuffer.cpp  GBuffer.h  LightManager.cpp  LightManager.h  LightVolumeRenderer.cpp  LightVolumeRenderer.h  ShadowMap.cpp  ShadowMap.h  SkyboxRenderer.cpp  SkyboxRenderer.h
src/Renderer/Debug/: ImGuiRenderer.cpp  ImGuiRenderer.h
src/Resources/: AsyncResourceLoader.cpp  AsyncResourceLoader.h  EnvironmentMap.cpp  EnvironmentMap.h  Material.h  MaterialInstance.cpp  MaterialInstance.h  Model.h  ModelLoader.cpp  ModelLoader.h  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h  ResourcePool.h  Texture.h  TextureLoader.cpp  TextureLoader.h  UniformBufferObjects.h  Vertex.h
src/Scene/: Camera.h  Entity.h  FPSCameraController.h  Light.h  OrbitCameraController.h  Scene.h  Transform.h
tests/: TestAssert.cpp  TestAsyncResourceLoader.cpp  TestCamera.cpp  TestConfig.cpp  TestDepthBuffer.cpp  TestEvent.cpp  TestFrameManager.cpp  TestInput.cpp  TestLightManager.cpp  TestLog.cpp  TestMaterialInstance.cpp  TestMipmapGenerator.cpp  TestModelLoader.cpp  TestRHIBuffer.cpp  TestRHICommandBuffer.cpp  TestRHICommandPool.cpp  TestRHIDeletionQueue.cpp  TestRHIDescriptor.cpp  TestRHIDevice.cpp  TestRHIFence.cpp  TestRHIImage.cpp  TestRHIInstance.cpp  TestRHIPhysicalDevice.cpp  TestRHIPipeline.cpp  TestRHISampler.cpp  TestRHISemaphore.cpp  TestRHIShader.cpp  TestRHISwapchain.cpp  TestRHITexture.cpp  TestResourceHandle.cpp  TestResourceManager.cpp  TestScene.cpp  TestTextureLoader.cpp  TestThreadPool.cpp  TestTimer.cpp  TestVertex.cpp  TestWindow.cpp
